fix: templates active ring, dark scrollbar in side panel

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,9 +18,21 @@
     @apply rounded-full bg-gray-400;
     border: 2px solid white;
   }
+  
+  .dark .scrollbar::-webkit-scrollbar-thumb {
+    border: 2px solid #2c2c2c;
+  }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
     @apply rounded-full bg-gray-500;
+  }
+
+  .dark .scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-[#5c5c5c];
+  }
+  
+  .dark .scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-[#c0c0c0];
   }
 
   .scrollbar {
